--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "postinstall": "rm -rf node_modules && npm install",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
