--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     
-    "start": "npm run start --prefix backend",
-    "postinstall": "rm -rf node_modules && npm install"
+    "start": "npm run start --prefix backend"
+    
   },
   "keywords": [],
   "author": "",
