--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "rollup": "^3.28.0"
   }
 }
